--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -52,21 +52,21 @@
 
 
     <div class="benefits">
-        <div class="benefit-lead"></div>
+        <div class="benefit-lead">
             <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-lead">
+        <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-lead">
+        <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -74,6 +74,11 @@
             </p>
         </div>
     </div>
+  
+  
+  
+  
+  
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
