--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -25,7 +25,6 @@
     </header>
    
     <div class="hero"></div>
-
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" />
@@ -59,14 +58,14 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-lead">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-lead">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
